--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -40,3 +40,78 @@ a {
   text-decoration: none;
   color: #fff;
 }
+
+/* Auth (Sign-up and Login) form */
+.auth-form-input {
+  z-index: 99;
+  padding: 10px;
+  width: 100%;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  color: #fff;
+  transition: all ease 0.3s;
+  position: relative;
+}
+
+.auth-form-input-error {
+  z-index: 99;
+  padding: 10px;
+  width: 100%;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #d4392a;
+  outline: none;
+  color: #fff;
+  transition: all ease 0.3s;
+  position: relative;
+}
+
+.auth-form-input:focus,
+.auth-form-input:valid {
+  border-bottom: 1px solid #36b682;
+}
+
+.auth-form-input-error:focus,
+.auth-form-input-error:valid {
+  border-bottom: 1px solid #d4392a;
+}
+
+.auth-form-input:focus + .auth-form-label,
+.auth-form-input:valid + .auth-form-label {
+  color: #36b682;
+  top: -19px;
+}
+
+.auth-form-label {
+  z-index: 0;
+  color: #fff;
+  position: absolute;
+  top: 16px;
+  left: 5px;
+  transition: all ease 0.3s;
+}
+
+.auth-form-label-error {
+  z-index: 0;
+  color: #d4392a;
+  position: absolute;
+  top: 16px;
+  left: 5px;
+  transition: all ease 0.3s;
+}
+
+.auth-form-input-error:focus + .auth-form-label-error,
+.auth-form-input-error:valid + .auth-form-label-error {
+  color: #d4392a;
+  top: -19px;
+}
+
+.auth-error-notice {
+  color: #d4392a;
+  position: absolute;
+  top: -14px;
+  font-size: 1rem;
+  left: 135px;
+}
