--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -115,3 +115,24 @@ a {
   font-size: 1rem;
   left: 135px;
 }
+
+/* Modal */
+#modal-background {
+  position: fixed; /* Stay in place */
+  z-index: 999; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100vw; /* Full width */
+  height: 100vh; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #000000; /* Fallback color */
+  opacity: 0.7;
+}
+
+#modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #242b23;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
