--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -125,8 +125,7 @@ a {
   width: 100vw;
   height: 100vh;
   overflow: auto;
-  background-color: #000000;
-  opacity: 0.7;
+  background-color: rgb(0, 0, 0, 0.75);
 }
 
 #modal-content {
