--- a/frontend/src/components/main_page/mainPage.css
+++ b/frontend/src/components/main_page/mainPage.css
@@ -5,3 +5,127 @@
 #next-button {
   height: 30px;
 }
+
+#main-container {
+  display: grid;
+  grid-template-columns: repeat(40, 1fr);
+  grid-template-rows: 20px 40px 150px 150px 1fr 50px 30px;
+  margin: 30px 15px;
+}
+
+#main-container__word-counter {
+  grid-row: 1;
+  grid-column: 20 / span 2;
+  text-align: center;
+}
+
+#main-container__word {
+  grid-row: 3;
+  grid-column: 11 / span 20;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 110px 28px 50px 60px;
+}
+
+#main-container__word-name {
+  grid-row: 1;
+  grid-column: 1 / span 10;
+  color: #67bdcc;
+  font-size: 6rem;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#main-container__word-class {
+  grid-row: 2;
+  grid-column: 1 / span 10;
+  text-align: center;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+#main-container__word-meaning {
+  grid-row: 4;
+  grid-column: 1 / span 10;
+  font-size: 2.3rem;
+  font-weight: 500;
+  text-align: center;
+}
+
+#main-container__examples-container {
+  grid-row: 5;
+  grid-column: 7 / span 30;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+#examples-notice {
+  margin-bottom: 30px;
+  color: #ddcb27;
+  text-align: center;
+  font-size: 1.7rem;
+}
+
+#examples-notice + ul {
+  padding: 0;
+  margin: 0;
+}
+
+.example-item {
+  margin-bottom: 50px;
+  font-size: 1.4rem;
+  word-break: break-all;
+}
+
+#prev-word-button-container {
+  display: flex;
+  align-items: center;
+  grid-row: 4 / span 1;
+  grid-column: 2 / span 1;
+}
+
+#prev-button {
+  height: 70px;
+}
+
+#next-word-button-container {
+  display: flex;
+  align-items: center;
+  grid-row: 4 / span 1;
+  grid-column: 39 / span 1;
+}
+
+#next-button {
+  height: 70px;
+}
+
+.turn-word-button {
+  cursor: pointer;
+}
+
+.turn-word-button:hover > path {
+  fill: #d3c8c8;
+}
+
+#main-container__buttons-container {
+  grid-row: 7;
+  grid-column: 1 / span 40;
+  display: grid;
+  grid-template-columns: repeat(50, 1fr);
+}
+
+#buttons-container__edit-button {
+  grid-column: 14 / span 6;
+}
+
+#buttons-container__delete-button {
+  grid-column: 21 / span 6;
+}
+
+#buttons-container__shuffle-button {
+  grid-column: 33 / span 6;
+}
