--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -117,7 +117,7 @@ a {
 }
 
 /* Modal */
-#modal-background {
+.modal-background {
   position: fixed;
   z-index: 999;
   left: 0;
@@ -128,13 +128,185 @@ a {
   background-color: rgb(0, 0, 0, 0.75);
 }
 
-#modal-content {
+.modal-content {
   background-color: #242b23;
   margin: 5% auto;
   padding: 15px;
   border: 1px solid #242b23;
   width: 80%;
   position: relative;
+}
+
+.modal-exit-icon-container {
+  position: absolute;
+  right: 16px;
+  top: 12px;
+}
+
+.modal-content__alert-duplicate {
+  color: #d4392a;
+  text-align: center;
+  font-size: 1.1rem;
+}
+
+.modal-exit-icon {
+  height: 35px;
+  cursor: pointer;
+}
+
+.modal-exit-icon:hover > path {
+  fill: #b9b7b7;
+}
+
+.modal-exit-icon-container {
+  position: absolute;
+  right: 16px;
+  top: 12px;
+}
+
+.modal-word-container {
+  width: 80vw;
+  margin: 35px auto;
+}
+
+.modal-word-form {
+  font-size: 1.4rem;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.modal-word-form__word-name-container {
+  width: 96%;
+  position: relative;
+  margin: 15px 15px 25px 0;
+}
+
+.modal-word-form__word-meaning-container {
+  width: 96%;
+  position: relative;
+  margin: 25px 15px 0 0;
+}
+
+.modal-word-form__examples-container {
+  width: 96%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 27px 0 0 0;
+}
+
+.examples-container__notice-max-number {
+  position: absolute;
+  top: 29px;
+  left: 170px;
+  font-size: 1.1rem;
+}
+
+.examples-container__title {
+  color: #c7dc44;
+  margin-bottom: 11px;
+  font-size: 1.5rem;
+}
+
+.examples-container__add-button {
+  position: absolute;
+  top: 24px;
+  left: 130px;
+  grid-row: 1;
+  grid-column: 7 / span 2;
+  width: 26px;
+  height: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.example-add-button__icon {
+  height: inherit;
+}
+
+.examples-container__add-button:hover > .example-add-button__icon + path {
+  fill: #92a12f;
+}
+
+.example-container-1 {
+  position: relative;
+  margin: 25px 0 25px 0;
+}
+
+.example-container-2 {
+  position: relative;
+  margin: 15px 0 25px 0;
+}
+
+.example-container-3 {
+  position: relative;
+  margin: 15px 0 25px 0;
+}
+
+.add-word-form {
+  font-size: 1.4rem;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.add-word-form__word-meaning-container {
+  width: 96%;
+  position: relative;
+  margin: 25px 15px 0 0;
+}
+
+.add-word-form__word-class-container {
+  position: relative;
+}
+
+.add-word-form__examples-container {
+  width: 96%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 27px 0 0 0;
+}
+
+.word-class-container__title {
+  color: #c7dc44;
+  font-size: 1.5rem;
+}
+
+.word-class-container__select-word-class {
+  position: absolute;
+  top: 15px;
+  left: 193px;
+  color: #fff;
+  border-radius: 0.3rem;
+  width: 200px;
+  cursor: pointer;
+}
+
+.word-class-container__select-word-class:hover {
+  box-shadow: 0 0 2px 4px #2063b9;
+  background: url('./img/select-arrow-down-white.svg') no-repeat 95% 50%;
+}
+
+.add-word-form__submit-button {
+  background-color: #c46543;
+  color: #f1e4e4;
+  border: none;
+  border-radius: 0.35rem;
+  padding: 15px 0;
+  width: 90%;
+  margin: 10px auto 0;
+  cursor: pointer;
+}
+
+.add-word-form__submit-button:hover {
+  background-color: #aa4c2a;
+  color: #ffffff;
 }
 
 /* select */
