--- a/frontend/src/components/main_page/mainPage.css
+++ b/frontend/src/components/main_page/mainPage.css
@@ -43,6 +43,16 @@
   grid-row: 2;
   grid-column: 1 / span 10;
   text-align: center;
+  margin-top: 3px;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+#main-container__word-formality {
+  grid-row: 3;
+  grid-column: 1 / span 10;
+  text-align: center;
+  margin-top: 6px;
   font-size: 1.5rem;
   font-style: italic;
 }
@@ -53,7 +63,7 @@
   font-size: 2.3rem;
   font-weight: 500;
   text-align: center;
-  margin-top: 15px;
+  margin-top: 18px;
 }
 
 #main-container__examples-container {
