--- a/frontend/src/components/main_page/mainPage.css
+++ b/frontend/src/components/main_page/mainPage.css
@@ -9,7 +9,7 @@
 #main-container {
   display: grid;
   grid-template-columns: repeat(40, 1fr);
-  grid-template-rows: 20px 40px 150px 1fr 1fr 50px 30px;
+  grid-template-rows: 20px 80px 150px 1fr 1fr 50px 30px;
   margin: 30px 15px;
 }
 
@@ -17,6 +17,41 @@
   grid-row: 1;
   grid-column: 20 / span 2;
   text-align: center;
+}
+
+#main-container__move-to-nth-word {
+  grid-row: 2;
+  grid-column: 1 / span 40;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 15px;
+}
+
+#main-container__move-to-nth-word > input {
+  margin: 0 2px 0 8px;
+  background-color: inherit;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  color: #fff;
+  width: 45px;
+  padding-left: 2px;
+}
+
+#main-container__move-to-nth-word > button {
+  margin: 0 0 3px 10px;
+  background-color: #ad944f;
+  border: none;
+  border-radius: 0.35rem;
+  color: #fff;
+  padding: 5px;
+  cursor: pointer;
+  outline: none;
+}
+
+#main-container__move-to-nth-word > button:hover {
+  background-color: #d3b76b;
 }
 
 #main-container__word {
