--- a/frontend/src/components/main_page/mainPage.css
+++ b/frontend/src/components/main_page/mainPage.css
@@ -9,7 +9,6 @@
 #main-container {
   display: grid;
   grid-template-columns: repeat(40, 1fr);
-  grid-template-rows: 20px 80px 1fr 90px 1fr 50px 30px;
   margin: 30px 15px;
 }
 
@@ -25,7 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
 }
 
 #main-container__move-to-nth-word > input {
@@ -59,7 +58,6 @@
   grid-column: 5 / span 32;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 1fr 28px 50px 1fr;
 }
 
 #main-container__word-name {
@@ -78,7 +76,7 @@
   grid-row: 2;
   grid-column: 1 / span 10;
   text-align: center;
-  margin-top: 3px;
+  /* margin: 3px 0 60px 0; */
   font-size: 1.5rem;
   font-style: italic;
 }
@@ -98,7 +96,7 @@
   font-size: 2.3rem;
   font-weight: 500;
   text-align: center;
-  margin-top: 18px;
+  margin: 80px 0;
 }
 
 #main-container__examples-container {
@@ -108,6 +106,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  margin: 10px 0;
 }
 
 #examples-notice {
@@ -131,23 +130,25 @@
 #prev-word-button-container {
   display: flex;
   align-items: center;
-  grid-row: 3 / span 1;
+  grid-row: 2 / span 1;
   grid-column: 2 / span 1;
 }
 
 #prev-button {
-  height: 80px;
+  height: 90px;
+  margin: 25px 0 40px 0;
 }
 
 #next-word-button-container {
   display: flex;
   align-items: center;
-  grid-row: 3 / span 1;
+  grid-row: 2 / span 1;
   grid-column: 39 / span 1;
 }
 
 #next-button {
-  height: 80px;
+  height: 90px;
+  margin: 25px 0 40px 0;
 }
 
 .turn-word-button {
