--- a/frontend/src/components/main_page/mainPage.css
+++ b/frontend/src/components/main_page/mainPage.css
@@ -14,7 +14,7 @@
 
 #main-container__word-counter {
   grid-row: 1;
-  grid-column: 20 / span 2;
+  grid-column: 1 / span 40;
   text-align: center;
 }
 
@@ -76,9 +76,9 @@
   grid-row: 2;
   grid-column: 1 / span 10;
   text-align: center;
-  /* margin: 3px 0 60px 0; */
   font-size: 1.5rem;
   font-style: italic;
+  margin-top: 5px;
 }
 
 #main-container__word-formality {
